tests/parser/valid/test_if.src
fn main() {
    int x = 5;
    if (x > 1) {
        return;
    }
}