tests/parser/invalid/chained_relational.src
fn main() {
    bool x = 1 < 2 < 3;
}
